--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <label class="campo-grupo">
           <span class="texto-medio-azul">Produto</span>
           <select class="produto-input" name="produto" id="produto">
-            <option value="Fone">Fone de ouvido - R$100</option>
-            <option value="Celular">Celular - R$1400</option>
-            <option value="Oculus">Oculus VR - R$5000</option>
+            <option value="Fone - R$100">Fone de ouvido - R$100</option>
+            <option value="Celular - R$1400">Celular - R$1400</option>
+            <option value="Oculus VR - R$5000">Oculus VR - R$5000</option>
           </select>
           </div>
         </label>
